# TravlApes_backend

./: .env  README.md  bhaktapur.json  bleh.txt  get_coordinates.py  jsontodb.py  kathmandu.json  kathmandu_pois.json  kathmandu_valley_places.json  lalitpur.json  main.py  places_with_coordinates.json  pokhara.json  pyproject.toml  scrape.py  scrape2.py  test_main.py
osm-deploy/: Dockerfile-bike  Dockerfile-car  Dockerfile-foot  deploy.sh  start.sh
src/: db.py  jwttoken.py  models.py  oauth.py  place_recommender.py  server.py  weather_and_season.py
src/routes/: destinationsRoute.py  dummyroute.py  osrmRoute.py  recommend.py
