[project]
name = "travlapes-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "fastapi>=0.125.0",
    "motor>=3.7.1",
    "pydantic[email]>=2.12.5",
    "pymongo>=4.15.5",
    "python-multipart>=0.0.21",
    "requests>=2.32.5",
    "toml>=0.10.2",
    "uvicorn>=0.38.0",
]
